--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -2,7 +2,7 @@ button.jux-play {
     background-color: #bbb;
     float: left;
     border: 0;
-    height: 50px;
+    height: 30px;
     width: 35px;
     outline: none;
 }
@@ -95,7 +95,7 @@ button.jux-play span.glyphicon {
 }
 
 .jux-track-container.jux-media {
-    margin-top: 0;
+    margin-top: -106px;
 }
 
 .jux-media-display .media-track-icon:before,
