--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -1,109 +1,16 @@
 .jux-playhead-container {
-    height: 0;
-    margin-left: 55px;
+    margin-left: 48px;
+}
+.jux-playhead-container input[type=range] {
+    cursor: col-resize;
+    width: 930px;
 }
 
 .jux-playhead-line {
-    height: 100px;
+    height: 104px;
     width: 2px;
     background-color: #000;
     position: relative;
-    z-index: 50;
-    margin-top: -1px;
-}
-
-.jux-playhead-line .jux-playhead-top-cutpoint,
-.jux-playhead-line .jux-playhead-bottom-cutpoint {
-    position: relative;
-    width: 1px;
-    margin-left: -7px;
-}
-
-.jux-playhead-line .jux-playhead-top-cutpoint {
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-top: 8px solid black;
-}
-
-.jux-playhead-line .jux-playhead-bottom-cutpoint {
-    top: 86px;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid black;
-}
-
-.jux-playhead-container input[type=range] {
-    z-index: 50;
-    -webkit-appearance: none;
-    width: 100%;
-    cursor: col-resize;
-    position: relative;
-    margin: 0;
-    border: 0;
-}
-
-.jux-playhead-container input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 0;
-    cursor: col-resize;
-    box-shadow: 1.1px 1.1px 1px rgba(0, 0, 0, 0), 0px 0px 1.1px rgba(13, 13, 13, 0);
-    background-color: #000;
-    border-radius: 0px;
-    border: 0px solid rgba(255, 255, 37, 0);
-}
-.jux-playhead-container input[type=range]::-webkit-slider-thumb {
-    height: 100px;
-    width: 20px;
-    cursor: col-resize;
-    -webkit-appearance: none;
-    margin-top: -100px;
-}
-.jux-playhead-container input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #000000;
-}
-.jux-playhead-container input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 0;
-    cursor: col-resize;
-    box-shadow: 1.1px 1.1px 1px rgba(0, 0, 0, 0), 0px 0px 1.1px rgba(13, 13, 13, 0);
-    background: #000000;
-    border-radius: 0px;
-    border: 0px solid rgba(255, 255, 37, 0);
-}
-.jux-playhead-container input[type=range]::-moz-range-thumb {
-    background-color: rgba(255, 255, 255, 0);
-    height: 100px;
-    border: 0;
-}
-.jux-playhead-container input[type=range]::-ms-track {
-    width: 100%;
-    height: 0;
-    cursor: col-resize;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-.jux-playhead-container input[type=range]::-ms-fill-lower {
-    background: #000000;
-    border: 0px solid rgba(255, 255, 37, 0);
-    border-radius: 0px;
-    box-shadow: 1.1px 1.1px 1px rgba(0, 0, 0, 0), 0px 0px 1.1px rgba(13, 13, 13, 0);
-}
-.jux-playhead-container input[type=range]::-ms-fill-upper {
-    background: #000000;
-    border: 0px solid rgba(255, 255, 37, 0);
-    border-radius: 0px;
-    box-shadow: 1.1px 1.1px 1px rgba(0, 0, 0, 0), 0px 0px 1.1px rgba(13, 13, 13, 0);
-}
-.jux-playhead-container input[type=range]::-ms-thumb {
-    height: 100px;
-    width: 20px;
-    cursor: col-resize;
-    margin-top: -100px;
-}
-.jux-playhead-container input[type=range]:focus::-ms-fill-lower {
-    background: #000000;
-}
-.jux-playhead-container input[type=range]:focus::-ms-fill-upper {
-    background: #000000;
+    display: inline-block;
+    z-index: 5;
 }
