--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -20,6 +20,8 @@ button.jux-play span.glyphicon {
     min-height: 600px;
     margin: 0 auto;
     opacity: 0;
+    border-collapse: collapse;
+    border-right-width: 0;
 }
 
 .react-grid-item {
@@ -82,6 +84,8 @@ button.jux-play span.glyphicon {
     background-color: #ddd;
     float: left;
     border: 1px solid #ccc;
+    border-left-width: 0;
+    border-bottom-width: 0;
 }
 
 .jux-media-display .text-track-icon:before,
@@ -137,6 +141,7 @@ button.jux-play span.glyphicon {
     margin-left: 55px;
     background-color: #f5f5f5;
     position: relative;
+    border-bottom-width: 0;
 }
 
 .jux-track-instructions {
@@ -312,6 +317,11 @@ button.jux-play span.glyphicon {
 }
 
 /* TimelineRuler */
+
+.jux-timeline {
+    border: 1px solid #ccc;
+    border-right-width: 0;
+}
 
 .jux-timeline-ruler {
     height: 21px;
