Add margin between playhead and ruler

--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -1,5 +1,6 @@
 .jux-playhead-container {
     margin-left: 48px;
+    margin-top: 10px;
 }
 .jux-playhead-container input[type=range] {
     cursor: col-resize;
