--- a/media/templates/collectionwidget_assets.mustache
+++ b/media/templates/collectionwidget_assets.mustache
@@ -49,7 +49,12 @@
             {{#active_filter_count}}
                 <br /><br />
                 <div class="well">
-                <div class="text-center">No items matched your search. Please try again.</div>
+                <div>
+                    <h5 class="text-center">No items matched your search</h5>
+                    <p>Suggestions:</p>
+                    <p>1. Use the filter options above to change or broaden the search.</p>
+                    <p>2. Or, build the course collection by importing or uploading materials. Visit the <a href="/">homepage</a> to learn more.</p>
+                </div>
                 </div>
             {{/active_filter_count}}
     </div>
