--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -23,4 +23,6 @@
     position: relative;
     display: inline-block;
     z-index: 5;
+    -webkit-transition: left 0.04s;
+    transition: left 0.04s;
 }
