CollectionWidget: hide clipstrip on quickedit

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4693,6 +4693,10 @@ ul.section-tabs>li>a.active {
     display: inline;
 }
 
+#collection-modal .clipstrip-display {
+    display: none;
+}
+
 .spacer {
     margin-top: 10px;
 }
