Add text updated notice

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -285,6 +285,10 @@ button.jux-play span.glyphicon {
     line-height: 1.3em;
 }
 
+.jux-updated-text {
+    display: none;
+}
+
 .jux-track-element-manager {
     border: 1px solid #ccc;
     padding: 10px;
