Hide range number in IE - PMT #109463

--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -16,6 +16,10 @@
     opacity: 0;
 }
 
+.jux-playhead-container input[type=range]::-ms-tooltip {
+    display: none;
+}
+
 .jux-playhead-line {
     height: 104px;
     width: 2px;
