--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -287,6 +287,7 @@ button.jux-play span.glyphicon {
 
 .jux-updated-text {
     display: none;
+    margin-top: 4px;
 }
 
 .jux-track-element-manager {
