Change updated text color to match help-text
See https://github.com/ccnmtl/juxtapose/pull/234#discussion_r95023266

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -288,6 +288,7 @@ button.jux-play span.glyphicon {
 .jux-updated-text {
     display: none;
     margin-top: 4px;
+    color: #666;
 }
 
 .jux-track-element-manager {
