Feature flag for vimeo display in the collection widget
Adding a switch for this to allow easier bug demo in staging

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -237,11 +237,10 @@
                 {% if course %}
                     this.current_course = {{ course.pk }};
                 {% endif %}
-                this.flags = [
-                    {% flag "collection-widget" %}
-                        'collection-widget'
-                    {% endflag %}
-                ];
+                this.flags = {
+                    enableVimeo:
+                    {% flag "enable_vimeo" %}true{% else %}false{% endflag %}
+                }
             {% endif %}
             {% if the_response %}
                 this.current_project = {{the_response.pk }};
