--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -212,7 +212,7 @@
                 </div>
                 <div class="next-page-loader" style="display: none">
                     <div>
-                        <img alt="Loading..." src="/media/img/ajax-loader-small.gif">
+                        <img alt="Loading..." src='{% static "img/ajax-loader-small.gif" %}'>
                         Loading more items
                     </div>
                 </div>
