--- a/media/templates/homepage.mustache
+++ b/media/templates/homepage.mustache
@@ -35,7 +35,7 @@
         </div>
         {{/switcher_collection_chooser}}
     </div> {{! end filter widget }}
-    
+
     <a href="#" id="homepage-create-menu" onclick='jQuery("#create-project-menu").toggle();' class="btn btn-default create right">
         Create&nbsp;
         <img src="{{#staticUrl}}{{/staticUrl}}img/menuselect.png" width="6" height="12" />
@@ -76,6 +76,14 @@
                 <input type="submit" value="Create Composition" />
             </form>
         {{/is_faculty}}
+
+        {{! TODO: remove is_superuser check when feature is ready }}
+        {{#is_superuser}}
+        <form action="/project/create/" method="post" class="create-form">
+        <input type="hidden" name="project_type" value="sequence"/>
+        <input type="submit" value="Create Sequence" />
+        </form>
+        {{/is_superuser}}
     </div>
 </div>
 
@@ -100,7 +108,7 @@
         </a>
      </li>
 {{/next_page}}
-</ul>   
+</ul>
 {{/num_pages}}
 
 <table>
@@ -162,23 +170,31 @@
 
                                 {{#projects}}
                                 <li class="projectlist
-                                    {{^display_as_assignment}}composition{{/display_as_assignment}}
-                                    {{#display_as_assignment}}assignment{{/display_as_assignment}}"
+                                    {{#is_sequence}}sequence-composition{{/is_sequence}}
+                                    {{^is_sequence}}
+                                        {{^display_as_assignment}}composition{{/display_as_assignment}}
+                                            {{#display_as_assignment}}assignment{{/display_as_assignment}}"
+                                    {{/is_sequence}}
                                     id="project-{{id}}">
 
                                     <div>
-                                        {{^display_as_assignment}}
-                                            <span class="metadata-value-composition">Composition</span>
-                                        {{/display_as_assignment}}
-                                        {{#display_as_assignment}}
-                                            <span class="metadata-value-assignment">{{description}}</span>
-                                            {{#collaboration.due_date}}
-                                                <span class="metadata-value-assignment right">due {{collaboration.due_date}}</span>
-                                            {{/collaboration.due_date}}
-                                            {{#due_date}}
-                                                <span class="metadata-value-assignment right">due {{due_date}}</span>
-                                            {{/due_date}}
-                                        {{/display_as_assignment}}
+                                        {{#is_sequence}}
+                                            <span class="metadata-value-sequence">Sequence</span>
+                                        {{/is_sequence}}
+                                        {{^is_sequence}}
+                                            {{^display_as_assignment}}
+                                                <span class="metadata-value-composition">Composition</span>
+                                            {{/display_as_assignment}}
+                                            {{#display_as_assignment}}
+                                                <span class="metadata-value-assignment">{{description}}</span>
+                                                {{#collaboration.due_date}}
+                                                    <span class="metadata-value-assignment right">due {{collaboration.due_date}}</span>
+                                                {{/collaboration.due_date}}
+                                                {{#due_date}}
+                                                    <span class="metadata-value-assignment right">due {{due_date}}</span>
+                                                {{/due_date}}
+                                            {{/display_as_assignment}}
+                                        {{/is_sequence}}
                                     </div>
 
                                     {{^collaboration}}
@@ -282,7 +298,7 @@
                                         </div>
                                         {{/feedback}}
                                         <br />
-                                    </div> 
+                                    </div>
                                 </li>
                                 {{/projects}}
                             </ul>
