Only disable spine-vid pointer-events on MS Edge - PMT #109709

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -238,8 +238,10 @@ button.jux-play span.glyphicon {
     width: 100px;
 }
 
-.jux-spine-display iframe {
-    pointer-events: none;
+@supports (-ms-ime-align:auto) {
+    .jux-spine-display iframe {
+        pointer-events: none;
+    }
 }
 
 .jux-spine-display .instructions,
