Add rewind button css - PMT #110065

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -1,3 +1,4 @@
+button.jux-rewind,
 button.jux-play {
     background-color: #bbb;
     float: left;
@@ -5,10 +6,6 @@ button.jux-play {
     height: 30px;
     width: 35px;
     outline: none;
-}
-
-button.jux-play span.glyphicon {
-    color: black;
 }
 
 .form-group {
