Remove references to 'response' - PMT #110189
The sequence composition is a standalone project, independent of a
'response'.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -264,8 +264,11 @@
                     {% flag "enable_vimeo" %}true{% else %}false{% endflag %}
                 }
             {% endif %}
+
             {% if the_response %}
-                this.current_project = {{ the_response.pk }};
+            this.current_project = {{ the_response.pk }};
+            {% elif project %}
+            this.current_project = {{ project.pk }};
             {% endif %}
         })();
     </script>
