LTI auth: connect user via LMS user identifier first

--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -41,9 +41,9 @@
             <h3>LTI</h3>
             {% bootstrap_field form.lti_integration %}
             {% if lti_context and lti_context.enable %}
-                <h5>Instructions</h5>
+                <h5>Unique Course Identifier</h5>
                 <ol>
-                    <li>Unique Course Identifier: {{lti_context.uuid}}</li>
+                    <li>custom_course_context={{lti_context.uuid}}</li>
                     <li><a href="https://github.com/ccnmtl/mediathread/wiki/LTI-Integration">Read full configuration instructions</a></li>
                 </ol>
             {% endif %}
