Roster management: allow staff to turn this feature on/off

--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -31,11 +31,15 @@
                 default.
             </span>
         </div>
-        {% if user.is_staff%}
-        <div class="well">
-            <h3>Item Download</h3>
-            {% bootstrap_field form.allow_item_download %}
-        </div>
+        {% if user.is_staff %}
+            <div class="well">
+                <h3>Item Download</h3>
+                {% bootstrap_field form.allow_item_download %}
+            </div>
+            <div class="well">
+                <h3>Allow Roster Management</h3>
+                {% bootstrap_field form.allow_roster_changes %}
+            </div>
         {% endif %}
         <div class="well">
             <h3>LTI</h3>
