Make timeline ruler bold on hover - PMT #110066

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -385,6 +385,10 @@ button.jux-play {
     z-index: 0;
 }
 
+.jux-timeline-ruler.hover {
+    font-weight: bold;
+}
+
 .jux-timeline-hline {
     height: 1px;
     position: relative;
