Disable rewind button at time 0 - PMT #110210

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -7,6 +7,10 @@ button.jux-play {
     outline: none;
 }
 
+button.jux-rewind.disabled {
+    color: #888;
+}
+
 .form-group {
     margin-bottom: 15px;
 }
