--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -27,6 +27,7 @@ button.jux-rewind.disabled {
 .react-grid-item {
     cursor: move;
     position: absolute;
+    display: -webkit-flex;
     display: flex;
     text-align: center;
     padding-top: 5px;
@@ -47,6 +48,7 @@ button.jux-rewind.disabled {
 }
 
 .jux-flex-horiz {
+    display: -webkit-flex; /* For Safari 8 */
     display: flex;
 }
 
@@ -66,6 +68,7 @@ button.jux-rewind.disabled {
 }
 
 .jux-vid-container {
+    display: -webkit-flex;
     display: flex;
     border: 1px solid #ddd;
 }
