--- a/mediathread/templates/assetmgr/install_chrome_extension.html
+++ b/mediathread/templates/assetmgr/install_chrome_extension.html
@@ -7,10 +7,18 @@
         from various sites. You must be using Chrome to install
         this extension.
     </p>
-    <button id="chrome-install-button"
-            class="btn btn-primary pull-left">
-        + Add to Chrome
-    </button>
+    {% if CAS_BASE == 'https://cas.columbia.edu' %}
+        <button id="chrome-install-button"
+                class="btn btn-primary pull-left">
+            + Add to Chrome
+        </button>
+    {% else %}
+        <a class="btn btn-primary pull-left"
+           target="_blank"
+           href="https://chrome.google.com/webstore/detail/mediathread/gambcgmmppeklfmbahomokogelnaffbi">
+            + Add to Chrome
+        </a>
+    {% endif %}
     <div class="pull-left">
         <img width="32" height="32"
              src="{% static 'img/browser_icons/chrome/chrome-a_128.png' %}"
