--- a/media/templates/collectionwidget_assets.mustache
+++ b/media/templates/collectionwidget_assets.mustache
@@ -156,7 +156,7 @@
                                             </a>
                                         </div>
                                     {{/editable}}
-                                    <div class="pull-left">
+                                    <div class="selection-citation">
                                         <div>
                                             {{#citable}}
                                                 <img class="materialCitation clickableCitation" alt=""
