--- a/media/templates/collectionwidget.mustache
+++ b/media/templates/collectionwidget.mustache
@@ -8,8 +8,9 @@
     </div>
     <div class="media-column">
         <div class="filter-widget" style="display: none">
+            <div class="spacer"></div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="switcher-tool switcher-search-text input-group">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                         <input type="text" class="form-control" name="search-text"
@@ -19,10 +20,10 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <div class="col-xs-5">
                     <div class="collection-chooser-container"></div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-3">
                     <div class="switcher collection-media-filter switcher-tool
                      {{#disable_media_type}}disabled{{/disable_media_type}}">
                         <a class="switcher-top menuclosed" onclick="return switcher(event, this);">
@@ -48,7 +49,7 @@
             </div>
             <div class="spacer"></div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="switcher-tool">
                         <span class="course-tags-prefix">Tags </span>
                         <select class="course-tags"
@@ -61,7 +62,7 @@
                     </div>
                </div>
 
-               <div class="col-md-5">
+               <div class="col-xs-5">
                     <div class="switcher-tool">
                         <span class="concept-prefix" title="{{Terms}}">Terms</span>
                         <select class="vocabulary"
@@ -80,7 +81,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-3">
                     <div class="switcher collection-date-filter switcher-tool">
                         <a class="switcher-top menuclosed" onclick="return switcher(event, this);">
                             <span class="switcher-prefix">Date </span>
