--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -232,7 +232,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title">Course Collection</h4>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body collection-body">
                     <div class="quick-edit" style="display: none"></div>
                     <div class="collection-view"></div>
                 </div>
